--- v2.0 (2016-xx-xx) ---
* Add Makefile as a proxy for shell script make.sh.
* Fix GCC 4.3.6 build using GCC >= 5.x.
* Fix GCC 4.7.4 build using GCC >= 5.x. [Thanks to Eugene Petrov]
* Add support of (versioned) extra settings files.
* Add new packages: exiv2, opencv. [Thanks to Eugene Petrov]
* Add new packages: yasm, libjpeg-turbo, protobuf, sdl2, qwt, boost,
  x264, ffmpeg.
* Fix build of mesa in systems with automake >= 1.15 and later.
* Update in all configs:
  - GCC_EXTRA_VER from 5.1.0 to 5.4.0
  - BINUTILS_VER from 2.25 to 2.26
  - QT5_VER from 5.5.0 to 5.7.0
  - FREEGLUT_VER from 2.8.1 to 3.0.0
  - PROJ_VER from 4.8.0 to 4.9.2
  - OPENSCENEGRAPH_VER from 3.2.1 to 3.4.0
  - SDL2_VER from 2.0.3 to 2.0.4
* Update in all static configs:
  - OPENSSL_VER from 1.0.2d to 1.0.2h
  - LIBGPG_ERROR_VER 1.19 to 1.23
  - LIBGCRYPT_VER from 1.6.3 to 1.7.1
  - LIBXML2_VER from 2.9.2 to 2.9.4
  - LIBXSLT_VER from 1.1.28 to 1.1.29
  - EXPAT_VER from 2.1.0 to 2.2.0
  - LIBPNG_VER from 1.2.53 to 1.2.56
  - JPEG_VER from 8d to 9b
  - TIFF_VER from 4.0.3 to 4.0.6
  - GIFLIB_VER from 5.0.5 to 5.1.4
  - JPEG_TURBO_VER from 1.4.1 to 1.5.0
* Update SetBuildFlags() function for better support of gcc-extra.
* Improve DeleteExtraFiles() function: now `find` tool is used for searching
  and removing of *.la files.
* Provide different cmake toolchain files for different GCC versions:
  ${SYSROOT}/usr/share/cmake/${SYSTEM}.gcc-${GCC_CURRENT_VER}.conf.cmake
* Add special special scripts with specified paths to toolchain files:
  ${PREFIX}/bin/${TARGET}-gcc-${GCC_CURRENT_VER}-cmake
* Add UpdateCmakeSymlink() and improve ConfigureCmakeProject() functions.
* Add ConfigureAutotoolsProject() and ConfigureAutotoolsProjectInBuildDir()
  functions and use them where it is possible.
* Add  ProcessStandardAutotoolsProjectInBuildDir() and
  ProcessStandardAutotoolsProject() functions and use them where it is
  possible.

--- v1.2 (2015-07-11) ---